--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,491 @@
-.App {
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+body{
+  overflow-x: hidden !important;
+}
+
+a{
+  text-decoration: none !important;
+
+}
+
+.Header {
+  display: flex;
+  /* border: 2px solid red; */
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  align-items: center;
+  background-color: rgb(251, 251, 251);
+}
+.Header__Brand {
+  display: flex;
+  padding-top: 5px;
+}
+.navbar-brand {
+  color: #032f35 !important;
+}
+.Header__Dropdown {
+  /* border: 2px solid red; */
+  margin-left: 10px;
+  display: flex
+}
+select {
+  width: 200px !important;
+
+  height: 3rem;
+  border: 3px solid #032f35;
+  background-color: white;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.Header__Input {
+  margin-left: 0.5rem;
   display: flex;
-  flex-direction: column;
+  flex: 0.9;
+  width: 100%;
+  
+}
+
+input {
+  display: flex;
+  flex: 1;
+  width: 100%;
+  height: 3rem;
+  text-align: center;
+}
+
+.Header__Search {
+  background-color: #032f35;
+  display: flex;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  border: 1px solid #032f35;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+@media only screen and (max-width:762px){
+  .Header__Input{
+    display: none;
+  }
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@media only screen and (max-width:762px){
+  .Header{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
   }
-  to {
-    transform: rotate(360deg);
+  
+  .Header__Dropdown{
+    margin-bottom: 1.5rem;
+    flex: 1;
+    width: 100%;
+    margin-left: 0px;
   }
+  
+  .Header__Dropdown select{
+    width: 100%;
+    flex: 1;margin-left: 0px;
+
+  }
+  .Header__Login{
+    margin-bottom: 1.5rem ;
+  }
+}
+
+.Header__Login{
+  margin-left: 1rem;
+  color:#032f35 ;
+  cursor: pointer;
+
+}
+.Header__Login button{
+  line-height: 1rem;
+  background-color: #fbfbfb;
+  outline: none !important;
+  border: none;
+}
+.Header__Login button:hover{
+      color: #064149;
+      border-bottom: 1px solid #032f35 !important;
+
+      }
+
+.Header__Sell{
+  margin-left: 1rem;
+  width: 7rem;
+  display: flex;
+  justify-content: center;
+  padding-top: 4px;
+  background-color: white;
+  border-radius: 25px;
+  color: #032f35;
+  border-top: 5px solid #38e5db;
+  border-right: 5px solid #3d75f9;
+  border-bottom: 5px solid #fdce37;
+  border-left: 5px solid #fdce37;
+  cursor: pointer; 
+  transition: 0.3s all; 
+}
+.Header__Sell:hover{
+  box-shadow: 0px 0px 21px -4px rgba(0,0,0,0.75);
+
+}
+
+/*************   MENU COMPONENT CSS **************/
+.Menu{
+  background-color: white;
+  display: flex;
+  flex-direction: row;
+  
+}
+.Menu__Dropdown{
+  margin-left: 1rem;
+}
+
+.Menu__Dropdown select{
+  border: none;
+  outline: none;
+}
+
+
+
+.Menu__Items {
+  display: flex;
+  align-items: center;
+  width: 50%;
+  padding-top: 10px;
+  padding-left: 5px;
+  justify-content: space-between  ;
+  margin-left: 1rem;
+}
+.Menu__Items p:hover{
+  cursor: pointer;
+  color: #a88614;
+}
+
+@media (max-width:762px){
+  .Menu__Items {
+      display: none;
+  }
+}
+
+/*********** POSTER COMPONENT CSS ************/
+
+.Poster1 img{
+  width: 100%;
+}
+@media (max-width:762px){
+  .Poster1 img{
+    height: 100px;
+    width: 100%;
+  }
+}
+
+@media (max-width:992px){
+  .Poster2 img{
+    width: 100%;
+  }
+}
+
+.Poster2 img{
+  text-align: center;
+  display: flex;
+}
+
+.Poster2{
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  background-color: white;
+}
+/* *************PHONE COMPONENT CSS */
+
+.Phone{
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  margin-top: 2rem;
+  background-color: #eaeeef;
+  border-radius: 5px;
+  /* line-height: 0rem; */
+}
+
+.Phone__Heading h3{
+  padding-left: 1rem;
+}
+
+.Phone__Items{
+  display: flex;
+}
+#Phone__Paper{
+  cursor: pointer;
+  padding-bottom: 0px;
+  border: 1px solid rgb(182, 182, 182);
+  
+}
+#Phone__Paper:hover{
+  box-shadow:         0px 0px 4px 0px rgba(50, 50, 50, 0.75);
+}
+
+.Phone__Footer{
+  text-align: left;
+  color: black;
+  margin-top: 5px;
+  padding-top: 1rem;
+  border-left: 8px solid #ffce32;
+  padding-left: 1rem;
+}
+.Phone__Footer h5{
+  font-size: 22px;
+}
+.date{
+  color: #999999;
+  text-align: right;
+}
+
+/* ************* FRESH COMPONENT CSS ************* */
+.Fresh{
+  margin-top: 2rem;
+
+}
+
+.Fresh h3{
+  padding-bottom: 1rem;
+}
+.Fresh .name {
+  text-align: left;
+  color: #999999;
+}
+
+
+/* ************ AD COMPONENT CSS ***************/
+.Ad {
+  margin-top: 4rem;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 4rem;
+}
+
+
+/* ************ APPINTRO COMPONENT CSS *********** */
+.AppIntro{
+  background-color: #f7f9fa;
+  display: flex;
+  padding-bottom: 2rem;
+}
+
+.AppIntro__Image{
+  display: flex;
+  justify-content: center;
+}
+
+.AppIntro__Text{
+  border-right: 3px solid silver;
+  margin-top: 2rem;
+  text-align: left;
+
+}
+.AppIntro__Text h4{
+  font-size: 34px;
+  color: #052e33;
+}
+.AppIntro__Text p{
+  font-size: 20px;
+  color: #052e33;
+}
+.AppIntro__Buttons{
+  padding-left: 2rem;
+  margin-top: 3.5rem;
+  text-align: center;
+}
+.AppIntro__Buttons img{
+  padding-right: 0.5rem;
+  color: #052e33;
+}
+
+/****************** FOOTER COMPONENT CSS *****************/
+.Footer{
+  padding-top: 1rem;
+  border-top: 1px solid silver;
+  line-height: 1rem;
+  padding-bottom: 1rem;
+  background-color: #eaeeef;
+}
+
+/* .Footer__ColItems{
+  border: 2px solid red;
+} */
+
+.Footer__ColItems h5{
+  color: #032f35;
+}
+.Footer__ColItems p{
+  color: #626e6f;
+  font-size: 14px;
+  cursor: pointer;
+}
+
+@media (max-width:992px){
+  .last{
+    text-align: center;
+  }
+}
+
+.Footer__Buttons img{
+  padding-top: 0.3rem;
+  padding-right: 1rem;  
+}
+
+.Footer__Icons{
+  padding-bottom: 1rem;
+}
+
+/****************** LICENSE COMPONENET CSS ******************/
+.License{
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
+  color:white;
+  background-color: #032f35;
+}
+.License__Right{
+  text-align: right;
+}
+
+.License__Left > span:first-child{
+  padding-right: 1rem;
+}
+
+@media (max-width:992px){
+  .License__Left{
+    text-align: center;
+    padding-bottom: 1rem;
+  }
+  .License__Right{
+    text-align: center;
+  }
+}
+
+/* *************** PRODUCT DETAILS COMPONENT CSS ****************/
+
+.ProductDetails{
+  margin-top: 6rem;
+  margin-bottom: 6rem;
+}
+.ProductDetails__Left{
+  border: 1px solid silver;
+  width: 100%;
+  background-color: black;
+  text-align: center;
+  margin-bottom: 2rem;
+}
+
+@media (max-width:555px){
+  .ProductDetails__Left img{
+    width: 100%;
+    height: 400px;
+  }
+  
+}
+
+.ProductDetails__Price{
+  border: 2px solid silver;
+  margin-left: 1rem;
+  padding-left: 1rem;
+  padding-top: 1rem;
+  padding-bottom: 2rem;
+  width: 100%;
+  margin-bottom: 2rem;
+  border-radius: 5px;
+}
+.ProductDetails__Price p {
+  color: #626e6f;
+  font-size: 17px ;
+}
+
+.ProductDetails__Price span{
+  color: #626e6f;
+}
+.ProductDetails__Seller{
+  border: 2px solid silver;
+  margin-left: 1rem;
+  padding-left: 1rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  width: 100%;
+  border-radius: 5px;
+  margin-bottom: 2rem;
+
+}
+.ProductDetails__Seller span{
+  color: #032f35;
+  font-weight: bold;
+  font-size: 20px;
+}
+.ProductDetails__Seller p{
+  color: #626e6f;
+  padding-left: 1rem;
+  font-size: 17px;
+}
+
+.ProductDetails__Seller button{
+  padding-left: 4rem;
+  padding-right: 3.8rem;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  border: 6px solid #032f35;
+  background-color: #032f35;
+  color: white;
+  outline: none !important;
+  width: 95%;
+  text-align: center;
+  border-radius: 5px;
+  font-weight: bold;
+  
+}
+.ProductDetails__Seller button:hover{
+    background-color: white;
+    /* border: 4px solid #032f35; */
+    color: black;
+}
+@media (max-width:992px){
+  .ProductDetails__Seller{
+    margin-left: 0px;
+  }
+  .ProductDetails__Price{
+    margin-left: 0px;
+  }
+}
+.number{
+  color: #3d75f9 !important;
+  font-weight: 500 !important;
+}
+
+.ProductDetails__Seller .number:hover{
+  text-decoration: underline;
+
+
+}
+
+.ProductDetails__Info{
+  padding-top: 1rem;
+  padding-left: 1rem;
+  padding-bottom: 1rem;
+  border: 2px solid silver;
+}
+.ProductDetails__Info p{
+  color: black;
+  font-size: 17px;
+}
+.ProductDetails__Info h3{
+  color: #032f35;
+}
+
+.AppIntro__Image img{
+  width: 100%;
+  height: 15rem;
+}
+.AppIntro__Buttons img{
+  margin-bottom: 1rem;
 }
